--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ const latestBlogs = await getLatestBlogs(3);
             <div class="sub-line">Coffee, Programming, Design</div>
           </div>
           <div class="hero-description">
-            <p>コーヒーとプログラミング、そしてデザインが好きな大学生です。実験的なプロダクトづくりと良い抽出を日々探求しています。</p>
+            <p>ドリップのプロ、なりたすぎ！８</p>
           </div>
           <div class="hero-cta">
             <Button href="/about" variant="primary">About Me</Button>
