--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ const latestBlogs = await getLatestBlogs(3);
             <div class="sub-line">Coffee, Programming, Design</div>
           </div>
           <div class="hero-description">
-            <p>ドリップのプロ、なりたすぎ！８</p>
+            <p>最近始めた焙煎、ちょっと難しくて楽しい。</p>
           </div>
           <div class="hero-cta">
             <Button href="/about" variant="primary">About Me</Button>
