--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -212,7 +212,7 @@ const jsonldStringfy = JSON.stringify({
     }
     
     .main-content {
-      padding-top: 5rem; /* ヘッダーの高さ分のマージンを追加 */
+      /* padding-top: 5rem; ヘッダーの高さ分のマージンを追加 */
       margin-right:0rem;
       border-bottom: 1px solid #e5e7eb;
       padding-bottom: 1rem;
@@ -220,7 +220,7 @@ const jsonldStringfy = JSON.stringify({
     
     @media (max-width: 768px) {
       .main-content {
-        padding-top: 4.5rem; /* モバイルでは少し小さく */
+        /* padding-top: 4.5rem; モバイルでは少し小さく */
       }
     }
   </style>
