--- a/src/components/header.css
+++ b/src/components/header.css
@@ -72,7 +72,9 @@
 }
 
 .header-links {
-  gap: 0.75rem;
+  gap: 2rem;
+  margin-left: 4rem;
+  margin-right: 4rem;
 }
 
 .header-links .indicator-button {
