--- a/src/components/hover-indicator.css
+++ b/src/components/hover-indicator.css
@@ -16,21 +16,21 @@
 .button-container {
   position: relative;
   display: inline-block;
-  padding: 0.5rem 0.25rem 0.5rem 0;
-  margin: 0.125rem 0;
+  padding: 0.5rem 0rem;
+  margin: 0;
 }
 
 .hover-indicator-nav.vertical .button-container {
   display: block;
   width: 100%;
-  margin: 0.025rem 0 0.0125rem 0;
+  margin: 0;
   position: relative;
-  padding: 0.3rem 0.5rem 0.3rem 0.5rem;
+  padding: 0rem 0.25rem;
 }
 
 .hover-indicator-nav.with-background {
   box-shadow: 0 0.125rem 0.5rem rgba(0, 0, 0, 0.1);
-  padding: 0.5rem 0.75rem 0.5rem 0.25rem;
+  padding: 0.5rem 0.75rem 0.7rem 0.25rem;
 }
 
 .hover-indicator-nav.no-background {
@@ -67,7 +67,7 @@
     0 0.125rem 0.5rem rgba(0, 0, 0, 0.04),
     0 0 0 0.125rem rgba(255, 255, 255, 0.1),
     0 0 1.5rem rgba(255, 255, 255, 0.05);
-  transition: opacity 0.3s ease, transform 0.3s ease, left 0.3s ease, top 0.3s ease, width 0.3s ease, height 0.3s ease;
+  transition: opacity 0.3s ease, transform 0.3s ease;
   z-index: 0;
 }
 
@@ -102,6 +102,8 @@
 .hover-indicator-nav.vertical .indicator-button {
   width: 100%;
   text-align: left;
+  padding-top:0.5rem;
+  padding-bottom:0.5rem;
 }
 
 @media (max-width: 47.9375rem) {
