--- a/src/components/header.css
+++ b/src/components/header.css
@@ -72,7 +72,6 @@
 }
 
 .header-links {
-  gap: 2rem;
   margin-left: 4rem;
   margin-right: 4rem;
 }
@@ -81,6 +80,8 @@
   font-weight: 700;
   font-size: 1.25rem;
   padding: 0.625rem;
+  padding-left:2rem;
+  padding-right:2rem;
 }
 
 /* タブレットサイズ */
