--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -216,6 +216,7 @@ const jsonldStringfy = JSON.stringify({
       margin-right:0rem;
       border-bottom: 1px solid #e5e7eb;
       padding-bottom: 1rem;
+      padding-top: 0rem;
     }
     
     @media (max-width: 768px) {
