--- a/src/components/page-container.css
+++ b/src/components/page-container.css
@@ -27,7 +27,7 @@
   margin: 0 auto;
   margin-left: 8.25rem;
   margin-right: 2.5vw;
-  padding: 2rem 1rem;
+  padding: 0 1rem;
 }
 
 /* Works container */
