--- a/src/components/sns-links.css
+++ b/src/components/sns-links.css
@@ -1,7 +1,7 @@
 /* SnsLinks component styles */
 .sns-section {
   text-align: center;
-  padding: 3rem 2rem;
+  padding: 1 2rem;
 }
 
 .sns-section h2 {
