--- a/src/components/page-container.css
+++ b/src/components/page-container.css
@@ -32,7 +32,7 @@
 
 /* Works container */
 .page-container-works {
-  max-width: 1200px;
+  max-width: var(--max-width);
   margin: 0 auto;
   margin-left: 10rem;
   padding: 2rem 1rem;
